syntax = "proto3";

option java_multiple_files = true;
option java_package = "pl.marcinzygmunt";

service AuthService {
  rpc Login(LoginRequest) returns (LoginReply);
  rpc SecureHello(HelloRequest) returns (HelloReply);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginReply {
  string token = 1;
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
